# proyecto_editor_texto

./: CMakeLists.txt  main.cpp
